# generic-genetic-algorithm

./: .gitignore  CMakeLists.txt  Chromosome.cpp  Chromosome.h  Dockerfile  GeneticAlgorithm.cbp  LICENSE  Makefile  Population.h  README.md  docsconf  doxygen.conf  main.cpp
configuration/: Configuration.cpp  Configuration.h
configuration/crossover/: AbstractCrossoverConfiguration.h
configuration/crossover/singlepoint/: SinglePointCrossoverConfiguration.cpp  SinglePointCrossoverConfiguration.h
configuration/crossover/singlepoint/mode/: AbstractSinglePointCrossoverConfigurationMode.h  FixedMode.h  RandomMode.h
configuration/crossover/uniform/: UniformCrossoverConfiguration.h
configuration/mutation/: MutationConfiguration.h
configuration/selection/: AbstractSelectionConfiguration.h
configuration/selection/proportionate/: ProportionateSelectionConfiguration.h
configuration/selection/tournament/: TournamentSelectionConfiguration.h
docker/: Dockerfile  docker-compose.yaml
docs/html/: _abstract_crossover_configuration_8h_source.html  _abstract_selection_configuration_8h_source.html  _abstract_single_point_crossover_configuration_mode_8h_source.html  _chromosome_8h_source.html  _configuration_8h_source.html  _fixed_mode_8h_source.html  _mutation_configuration_8h_source.html  _population_8h_source.html  _proportionate_selection_configuration_8h_source.html  _random_mode_8h_source.html  _random_number_generator_8h_source.html  _single_point_crossover_configuration_8h_source.html  _tournament_selection_configuration_8h_source.html  _uniform_crossover_configuration_8h_source.html  annotated.html  class_abstract_crossover_configuration-members.html  class_abstract_crossover_configuration.html  class_abstract_selection_configuration-members.html  class_abstract_selection_configuration.html  class_abstract_single_point_crossover_configuration_mode-members.html  class_abstract_single_point_crossover_configuration_mode.html  class_chromosome-members.html  class_chromosome.html  class_configuration-members.html  class_configuration.html  class_fixed_mode-members.html  class_fixed_mode.html  class_mutation_configuration-members.html  class_mutation_configuration.html  class_population-members.html  class_population.html  class_proportionate_selection_configuration-members.html  class_proportionate_selection_configuration.html  class_random_mode-members.html  class_random_mode.html  class_random_number_generator-members.html  class_random_number_generator.html  class_single_point_crossover_configuration-members.html  class_single_point_crossover_configuration.html  class_tournament_selection_configuration-members.html  (+47 more)
docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  searchdata.js  variables_0.js  variables_1.js
docs/latex/: annotated.tex  class_abstract_crossover_configuration.eps  class_abstract_crossover_configuration.tex  class_abstract_selection_configuration.eps  class_abstract_selection_configuration.tex  class_abstract_single_point_crossover_configuration_mode.eps  class_abstract_single_point_crossover_configuration_mode.tex  class_chromosome.tex  class_configuration.tex  class_fixed_mode.eps  class_fixed_mode.tex  class_mutation_configuration.tex  class_population.tex  class_proportionate_selection_configuration.eps  class_proportionate_selection_configuration.tex  class_random_mode.eps  class_random_mode.tex  class_random_number_generator.tex  class_single_point_crossover_configuration.eps  class_single_point_crossover_configuration.tex  class_tournament_selection_configuration.eps  class_tournament_selection_configuration.tex  class_uniform_crossover_configuration.eps  class_uniform_crossover_configuration.tex  hierarchy.tex  refman.tex
src/: main.cpp
src/examples/: CMakeLists.txt  example01.cpp  example03.cpp
src/geneticalgorithm/: Population.cpp  Population.h
src/geneticalgorithm/configuration/: Configuration.h
src/geneticalgorithm/configuration/crossover/singlepoint/: SinglePointCrossoverConfiguration.h
src/geneticalgorithm/configuration/crossover/singlepoint/mode/: AbstractSinglePointCrossoverConfigurationMode.cpp  FixedMode.cpp  FixedMode.h
src/geneticalgorithm/configuration/crossover/uniform/: UniformCrossoverConfiguration.cpp
src/geneticalgorithm/configuration/selection/: AbstractSelectionConfiguration.cpp
src/geneticalgorithm/configuration/selection/proportionate/: ProportionateSelectionConfiguration.h
src/geneticalgorithm/configuration/selection/tournament/: TournamentSelectionConfiguration.h
src/geneticalgorithm/examples/: CMakeLists.txt  example01.cpp  example02.cpp
src/geneticalgorithm/implementation/: CMakeLists.txt  Chromosome.h  Population.h
src/geneticalgorithm/implementation/configuration/: Configuration.h
src/geneticalgorithm/implementation/configuration/crossover/singlepoint/: SinglePointCrossoverConfiguration.h
src/geneticalgorithm/implementation/configuration/crossover/singlepoint/mode/: RandomMode.h
src/geneticalgorithm/implementation/configuration/crossover/uniform/: UniformCrossoverConfiguration.h
src/geneticalgorithm/implementation/configuration/mutation/: MutationConfiguration.cpp
src/geneticalgorithm/implementation/configuration/selection/: AbstractSelectionConfiguration.h
src/geneticalgorithm/implementation/utils/: ProgressBar.cpp  ProgressBar.h
src/geneticalgorithm/utils/: RandomNumberGenerator.cpp  RandomNumberGenerator.h
